force-app/main/default/objects/SCOC__ScoringList__c/SCOC__ScoringList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Scoring List</description>
    <label>Score</label>
    <nameField>
        <displayFormat>SCORE-{00000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>