force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__EnhancedIndicatorCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__EnhancedIndicatorCode__c</fullName>
    <description>Score enhanced indicator code</description>
    <label>Enhanced Indicator Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>