force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__EnhancedIndicatorDescription__c.field-meta.xml
<CustomField>
    <fullName>SCOC__EnhancedIndicatorDescription__c</fullName>
    <description>Score enhanced indicator description</description>
    <label>Enhanced Indicator Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>