force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__PaymentIndex__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PaymentIndex__c</fullName>
    <description>Payment index</description>
    <label>Payment Index</label>
    <length>3</length>
    <type>Text</type>
</CustomField>