force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ReasonCode_1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReasonCode_1__c</fullName>
    <description>Score reason code 1</description>
    <label>Reason Code 1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>