force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ReasonCode_2__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReasonCode_2__c</fullName>
    <description>Score reason code 2</description>
    <label>Reason Code 2</label>
    <length>6</length>
    <type>Text</type>
</CustomField>