force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ReasonCode_4__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReasonCode_4__c</fullName>
    <description>Score reason code 4</description>
    <label>Reason Code 4</label>
    <length>6</length>
    <type>Text</type>
</CustomField>