force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ReasonCodeText_1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReasonCodeText_1__c</fullName>
    <description>Score reason code text 1</description>
    <label>Reason Code Text 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>