force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ReasonCodeText_2__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReasonCodeText_2__c</fullName>
    <description>Score reason code text 2</description>
    <label>Reason Code Text 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>