force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ReasonCodeText_3__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReasonCodeText_3__c</fullName>
    <description>Score reason code text 3</description>
    <label>Reason Code Text 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>