force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__RiskBasedPricingPercentage__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RiskBasedPricingPercentage__c</fullName>
    <description>Score risk based pricing percentage</description>
    <label>Risk Based Pricing Percentage</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>