force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__RiskBasedPricingPercentageMax__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RiskBasedPricingPercentageMax__c</fullName>
    <description>Score risk based pricing percentage maximum</description>
    <label>Risk Based Pricing Percentage Maximum</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>