force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__RiskBasedPricingPercentageMin__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RiskBasedPricingPercentageMin__c</fullName>
    <description>Score risk based pricing percentage minimum</description>
    <label>Risk Based Pricing Percentage Minimum</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>