force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__RiskClass__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RiskClass__c</fullName>
    <description>The system automatically populates this optional numeric field to indicate the Risk Class from the vendor response. By default, it is blank.</description>
    <label>Risk Class</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>