force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__RiskDescription__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RiskDescription__c</fullName>
    <description>The system populates this optional rich text field to display the risk description associated with a score. By default, it is null.</description>
    <label>Risk Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>