force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__Score__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Score__c</fullName>
    <description>Score</description>
    <label>Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>