force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ScoreCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ScoreCode__c</fullName>
    <description>Score Code</description>
    <label>Score Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>