force-app/main/default/objects/SCOC__ScoringList__c/fields/SCOC__ScoreSign__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ScoreSign__c</fullName>
    <description>Score Sign</description>
    <label>Score Sign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>